--- a/DLLInjector/imgui.ini
+++ b/DLLInjector/imgui.ini
@@ -1,19 +1,37 @@
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=168,191
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-ViewportPos=172,74
-ViewportId=0xEBE6C6E6
-Size=339,180
+ViewportPos=557,209
+ViewportId=0xA4D966FE
+Pos=489,0
+Size=421,698
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1697,314
-ViewportId=0xE927CF2F
-Size=550,680
+ViewportPos=557,209
+ViewportId=0xA4D966FE
+Size=487,698
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Another Window]
+Pos=60,60
+Size=198,71
+Collapsed=0
+
+[Window][Main Window]
+ViewportPos=1260,421
+ViewportId=0x8FE86BE8
+Size=350,300
 Collapsed=0
 
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=557,209 Size=910,698 Split=X
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=487,698 Selected=0xE87781F4
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=421,698 Selected=0xD00C9CD4
 
